--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,88 +1,76 @@
 .portfolio{
     display: flex;
 }
-
 .portfolio__more{
     display: inline-block;
-    padding-bottom: 72px;
-    padding-left: 0.4px;
+    padding-bottom: 7.2rem;
 }
-
 .portfolio__more-info{
-    width: 150px;
+    width: 15rem;
     min-width: 100%;
-    margin-bottom: 30px;
+    margin-bottom: 3rem;
 }
-
-.portfolio__banner-text{
-    color: #fff;
-    margin: 0;
-}
-
-.portfolio__text-bold{
-    font-weight: 700;
-    letter-spacing: 0.2px;
-    margin-bottom: 2px;
-}
-
-.portfolio__text{
-    margin: 0;
-    margin-top: -5px;
-}
-
-.portfolio__title{
-    margin: 0;
-    text-shadow: 0px 4px 0px #000000;
-}
-
 .portfolio__banner{
     position: relative;
     background: url() center center no-repeat;
     background-size: cover;
-    border-radius: 20px;
+    border-radius: 2rem;
     overflow: hidden;
     text-align: center;
-    
 }
-
-
 .portfolio__banner-more{
     background-image: url('../img/banner1.jpg');
-    min-height: 464px;
-    margin-top: 27px;
-    padding: 43px 15px;
+    min-height: 46.4rem;
+    margin-top: 2.7rem;
+    padding: 4.3rem 1.5rem;
     box-sizing: border-box;
 }
-
+.portfolio__banner-text{
+    color: var(--white);
+    margin: 0;
+}
+.portfolio__title{
+    margin: 0;
+    color: var(--white);
+    text-shadow: 0 .4rem 0 var(--dark-black);
+}
+.portfolio__text{
+    margin: 0;
+    margin-top: -.5rem;
+}
+.portfolio__text-bold{
+    font-weight: var(--font-bold);
+    letter-spacing: .02rem;
+    margin-bottom: .2rem;
+}
 .portfolio__banner_giant{
-    width: 470px;
-    height: 380px;
+    width: 47rem;
+    height: 38rem;
     display: flex;
     align-items: flex-end;
     justify-content: center;
-    padding: 17.5px;
+    padding: 1.75rem;
     box-sizing: border-box;
 }
-
-.portfolio__banner_big{
-    width: 370px;
-    height: 356px;
-    padding: 17.5px;
+.portfolio__banner{
+    margin-bottom: 3rem;
+}
+.porfolio__banner_small{
+    width: 17rem;
+    height: 22.2rem;
+}
+.porfolio__banner_mid{
+    width: 27rem;
+    height: 28.4rem;
+}
+.porfolio__banner_big{
+    width: 37rem;
+    height: 35.6rem;
+    padding: 1.75rem;
     box-sizing: border-box;
 }
-
-.portfolio__banner_mid{
-    width: 270px;
-    height: 284px;
-}
-
-.portfolio__banner_small{
-    width: 170px;
-    height: 222px;
-}
-
 .portfolio__image{
-    widows: 100%;
+    width: 100%;
     height: 100%;
     object-fit: cover;
     position: absolute;
@@ -90,24 +78,161 @@
     left: 0;
     z-index: -1;
 }
-
 .portfolio__content{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-content: space-between;
     flex: 1;
-    margin-left: 30px;
+    margin-left: 3rem;
 }
-
 .portfolio__wrap{
     display: flex;
     flex-wrap: wrap;
-    width: 370px;
+    width: 37rem;
     justify-content: space-between;
     align-content: flex-end;
 }
-
 .portfolio__banner-desc{
     width: 100%;
+}
+.portfolio_hide_hd{
+    display: none;
+}
+
+.portfolio_hide_xs{    /* слева над картинками появлялась стрелочка*/
+    display: none;
+}
+
+@media screen and (max-width: 1000px){
+    .portfolio{
+        justify-content: center;
+        font-size: 2rem;
+        width: 70em;
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    .portfolio__content{
+        justify-content: flex-start;
+        width: 45em;
+        flex: 0 0 auto;
+    }
+    .portfolio_hide_hd{
+        display: block;
+    }
+
+    .portfolio_hide{
+        display: none;
+    }
+    .portfolio__banner-more{
+        background-image: url('../img/banner1-mob.jpg');
+        width: 13em;
+        height: 22.3em;
+        min-height: auto;
+        padding-top: 1em;
+    }
+    .portfolio__banner_giant{
+        width: 22.4em;
+        height: 18.3em;
+        padding: 1.75em;
+        align-items: flex-start;
+    }
+    .porfolio__banner_small{
+        width: 8.4em;
+        height: 10.7em;
+    }
+    .porfolio__banner_mid{
+        width: 13em;
+        height: 13.6em;
+    }
+    .porfolio__banner_big{
+        width: 17.9em;
+        height: 18.2em;
+        padding: 1.75em;
+        box-sizing: border-box;
+    }
+    .portfolio__banner{
+        margin: 0.75em;
+    }
+    .portfolio__more-info{
+        width: auto;
+        min-width: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+    }
+    .portfolio__content{
+        margin-left: 0;
+    }
+    .main-block__wrap{
+        width: 100%;
+        overflow: hidden;
+    }
+    .portfolio__more{
+        width: 21.5em;
+        display: flex;
+        justify-content: flex-end;
+    }
+    .portfolio__mobile-wrap{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .portfolio__button{
+        margin: 1.5rem;
+    }
+    .portfolio__text_bottom{
+        position: absolute;
+        margin: 0;
+        bottom: 1rem;
+        left: 0;
+        width: 100%;
+    }
+    .portfolio__text_mid{
+        font-weight: 400;
+        font-size: 2.2rem;
+    }
+    .portfolio__title{
+        text-shadow: none;
+    }
+    .portfolio__wrap{
+        width: 18.5em;
+    }
+}
+
+@media screen and (max-width: 690px){
+    .portfolio{
+        font-size: 1.5rem;
+    }
+}
+
+@media screen and (max-width: 560px){
+    .portfolio{
+        font-size: 1.3rem;
+    }
+}
+
+@media screen and (max-width: 460px){
+    .portfolio{
+        font-size: 1rem;
+    }
+    .portfolio__text_mid{
+        font-size: 1.4rem;
+    }
+}
+
+@media screen and (max-width: 400px){
+    .portfolio__text-giant {
+        font-size: 2.4rem;
+    }
+    .portfolio__button {
+        margin: 0.8rem;
+        padding: 0.3rem 2.9rem;
+        font-size: 1.4rem;
+
+    }
+    .portfolio_hide_xs{
+        display: flex;
+    }
 }
