--- a/css/typography.css
+++ b/css/typography.css
@@ -1,87 +1,170 @@
 .title{
     font-family: 'Inter';
     font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 36px;
-    letter-spacing: 0.25px;
-    color: #2D3436;
+    font-weight: var(--font-bold);
+    font-size: 2.4rem;
+    line-height: 3.6rem;
+    letter-spacing: .025rem;
+    color: var(--black);
 }
-
 .title_h1{
-    font-weight: 800;
-    font-size: 96px;
-    line-height: 104px;
-    letter-spacing: -3px;
-    
+    font-weight: var(--font-extra-bold);
+    font-size: 9.6rem;
+    line-height: 10.4rem;
+    letter-spacing: -.3rem;
 }
-
 .title_h2{
-    font-weight: 900;
-    font-size: 64px;
-    line-height: 77px;
-    letter-spacing: -1px;
+    font-weight: var(--font-black);
+    font-size: 6.4rem;
+    line-height: 7.7rem;
+    letter-spacing: -.1rem;
 }
-
 .title_h3{
-    font-size: 48px;
-    line-height: 56px;
-    letter-spacing: -1px;
+    font-size: 4.8rem;
+    line-height: 5.6rem;
+    letter-spacing: -.1rem;
 }
-
 .title_h4{
-    font-size: 32px;
-    line-height: 48px;
-    letter-spacing: -0.5px;
+    font-size: 3.2rem;
+    line-height: 4.8rem;
+    letter-spacing: -.05rem;
 }
-
 .text{
     font-family: 'Inter';
     font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 32px;
-    color: #2D3436;
+    font-weight: var(--font-regular);
+    font-size: 1.8rem;
+    line-height: 3.2rem;
+    color: var(--black);
 }
-
 .text_big{
-    font-size: 24px;
-    line-height: 36px;
-    letter-spacing: -0.25px;
+    font-size: 2.4rem;
+    line-height: 3.6rem;
+    letter-spacing: -.025rem;
 }
-
 .text_small{
-    font-size: 14px;
-    line-height: 24px;
-    letter-spacing: 0.25px;
+    font-size: 1.4rem;
+    line-height: 2.4rem;
+    letter-spacing: .025rem;
 }
-
 .text_medium{
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 24px;
-    letter-spacing: 0.2px;
+    font-weight: var(--font-medium);
+    font-size: 1.4rem;
+    line-height: 2.4rem;
+    letter-spacing: .02rem;
 }
-
 .text_bold{
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 24px;
-    letter-spacing: 0.2px;
+    font-weight: var(--font-bold);
+    font-size: 1.4rem;
+    line-height: 2.4rem;
+    letter-spacing: .02rem;
 }
-
 .minicaps{
     font-family: 'Inter';
     font-style: normal;
-    font-weight: 800;
-    font-size: 12px;
-    line-height: 15px;
-    letter-spacing: 2.5px;
+    font-weight: var(-font-extra-bold);
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+    letter-spacing: .25rem;
     text-transform: uppercase;
 }
 
+@media screen and (max-width: 690px){
+    .title_h3{
+        font-size: 3.5rem; /**/
+    }
+    .text{
+        font-size: 1.4rem; /**/
+    }
+    .text_small{
+        font-size: 1.2rem; /**/
+    }
+}
 
+@media screen and (max-width: 560px){
+    .title_h3{
+        font-size: 2.5rem;
+        line-height: 3rem;
+    }
+    .text{
+        font-size: 1.2rem;
+        line-height: 1.2rem;
+    }
+    .text_small{
+        font-size: 1rem;
+        line-height: 1.2rem;
+    }
+}
 
+@media screen and (max-width: 460px){
+    .title_h3{
+        font-size: 2.2rem;
+        line-height: 3rem;
+    }
+    .text{
+        font-size: 0.9rem;
+        line-height: 1.2rem;
+    }
+    .text_small{
+        font-size: 0.8rem;
+        line-height: 1.2rem;
+    }
+}
 
-
-
+@media screen and (max-width: 100px){
+    .title{
+        font-size: 2.4rem;
+        line-height: 3.6rem;
+        letter-spacing: .025rem;
+    }
+    .title_h1{
+        font-size: 9.6rem;
+        line-height: 10.4rem;
+        letter-spacing: -.3rem;
+    }
+    .title_h2{
+        font-size: 6.4rem;
+        line-height: 7.7rem;
+        letter-spacing: -.1rem;
+    }
+    .title_h3{
+        font-size: 4.8rem;
+        line-height: 5.6rem;
+        letter-spacing: -.1rem;
+    }
+    .title_h4{
+        font-size: 3.2rem;
+        line-height: 4.8rem;
+        letter-spacing: -.05rem;
+    }
+    .text{
+        font-size: 1.8rem;
+        line-height: 3.2rem;
+        color: var(--black);
+    }
+    .text_big{
+        font-size: 2.4rem;
+        line-height: 3.6rem;
+        letter-spacing: -.025rem;
+    }
+    .text_small{
+        font-size: 1.4rem;
+        line-height: 2.4rem;
+        letter-spacing: .025rem;
+    }
+    .text_medium{
+        font-size: 1.4rem;
+        line-height: 2.4rem;
+        letter-spacing: .02rem;
+    }
+    .text_bold{
+        font-size: 1.4rem;
+        line-height: 2.4rem;
+        letter-spacing: .02rem;
+    }
+    .minicaps{
+        font-size: 1.2rem;
+        line-height: 1.5rem;
+        letter-spacing: .25rem;
+    }
+}
